objects/Opportunity_BA_GS_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Stores the External ID from Source System for Upsert Operation (Concatenation of Business Agreement and Group Section Unique ID</description>
        <label>BAGSA External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Opp_GS_Active_Health_Members__c</fullName>
        <formula>Opportunity_Group_Section__r.Total_Healthcare_Active_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Opp GS Active Health Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Benefit_Agreement__c</fullName>
        <description>Opportunity Benefit Agreement related to the  Opportunity group section Group Section</description>
        <label>Opportunity Benefit Agreement</label>
        <referenceTo>SGR_Opportunity_Benefit_Agreement__c</referenceTo>
        <relationshipLabel>Opportunity BA GS Assignments</relationshipLabel>
        <relationshipName>Opportunity_BA_GS_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Opportunity_Group_Section__c</fullName>
        <description>Opportunity group section related to the assignment</description>
        <label>Opportunity Group Section</label>
        <referenceTo>SGR_Opportunity_Group_Section__c</referenceTo>
        <relationshipLabel>Opportunity BA GS Assignments</relationshipLabel>
        <relationshipName>Opportunity_BA_GS_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Total_Active_Health_Members__c</fullName>
        <label>Total Active Health Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity BA GS Assignment</label>
    <nameField>
        <label>Opportunity BA GS Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity BA GS Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>